# kkk

./: .gitignore  README.md
ldlidar_ws_slam/: deploy.sh  rdk_setup.sh
ldlidar_ws_slam/my_map/: map_20260510_192911.pgm  map_20260510_192911.yaml  my_map.yaml
ldlidar_ws_slam/src/ldlidar_ros2/: CMakeLists.txt
ldlidar_ws_slam/src/ldlidar_ros2/launch/: ld14p.launch.py
ldlidar_ws_slam/src/lidar_to_serial_py/: README.md  package.xml  setup.py
ldlidar_ws_slam/src/lidar_to_serial_py/config/: example_config.yaml
ldlidar_ws_slam/src/lidar_to_serial_py/examples/cpp/: flight_controller_example.cpp
ldlidar_ws_slam/src/lidar_to_serial_py/launch/: lidar_fc_bridge.launch.py  lidar_serial_bridge.launch.py
ldlidar_ws_slam/src/lidar_to_serial_py/lidar_to_serial_py/: __init__.py
ldlidar_ws_slam/src/lidar_to_serial_py/lidar_to_serial_py/nodes/: __init__.py  lidar_fc_bridge.py  lidar_serial_bridge.py
ldlidar_ws_slam/src/lidar_to_serial_py/lidar_to_serial_py/protocol/: __init__.py  lidar_fc_protocol.py
ldlidar_ws_slam/src/lidar_to_serial_py/resource/: lidar_to_serial_py
ldlidar_ws_slam/src/lidar_to_serial_py/tools/: test_serial_receive.py
rdks100_slam/: MODULE_PLAN.txt  README.md
